--- a/modules/_local_main_.services.html
+++ b/modules/_local_main_.services.html
@@ -133,6 +133,7 @@
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.iclonesite.html" class="tsd-kind-icon">IClone<wbr>Site</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.ideletesite.html" class="tsd-kind-icon">IDelete<wbr>Site</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.ideletesites.html" class="tsd-kind-icon">IDelete<wbr>Sites</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.idevkitserviceargs.html" class="tsd-kind-icon">IDev<wbr>Kit<wbr>Service<wbr>Args</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.idomains.html" class="tsd-kind-icon">IDomains</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.iexportsite.html" class="tsd-kind-icon">IExport<wbr>Site</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.iwpcredentials.html" class="tsd-kind-icon">IWPCredentials</a></li>
@@ -159,7 +160,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Allocation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>blacklistedPorts<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>ports<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/f304b53/main.d.ts#L1023">main.d.ts:1023</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/main.d.ts#L1041">main.d.ts:1041</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -185,7 +186,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Pool<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/f304b53/main.d.ts#L1019">main.d.ts:1019</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/main.d.ts#L1037">main.d.ts:1037</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -203,7 +204,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Service<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/f304b53/main.d.ts#L1015">main.d.ts:1015</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/main.d.ts#L1033">main.d.ts:1033</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -331,6 +332,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/_local_main_.services.ideletesites.html" class="tsd-kind-icon">IDelete<wbr>Sites</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="../interfaces/_local_main_.services.idevkitserviceargs.html" class="tsd-kind-icon">IDev<wbr>Kit<wbr>Service<wbr>Args</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/_local_main_.services.idomains.html" class="tsd-kind-icon">IDomains</a>
