--- a/interfaces/_local_.hostconnection.html
+++ b/interfaces/_local_.hostconnection.html
@@ -91,6 +91,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.hostconnection.html#accountid" class="tsd-kind-icon">account<wbr>Id</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.hostconnection.html#hostid" class="tsd-kind-icon">host<wbr>Id</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.hostconnection.html#remotesiteenv" class="tsd-kind-icon">remote<wbr>Site<wbr>Env</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.hostconnection.html#remotesiteid" class="tsd-kind-icon">remote<wbr>Site<wbr>Id</a></li>
 							</ul>
 						</section>
@@ -105,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">account<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/f304b53/index.d.ts#L182">index.d.ts:182</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L182">index.d.ts:182</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +116,17 @@
 					<div class="tsd-signature tsd-kind-icon">host<wbr>Id<span class="tsd-signature-symbol">:</span> <a href="../enums/_local_.hostid.html" class="tsd-signature-type">HostId</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/f304b53/index.d.ts#L183">index.d.ts:183</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L183">index.d.ts:183</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="remotesiteenv" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> remote<wbr>Site<wbr>Env</h3>
+					<div class="tsd-signature tsd-kind-icon">remote<wbr>Site<wbr>Env<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L185">index.d.ts:185</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -125,7 +136,7 @@
 					<div class="tsd-signature tsd-kind-icon">remote<wbr>Site<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/f304b53/index.d.ts#L184">index.d.ts:184</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L184">index.d.ts:184</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -184,6 +195,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_local_.hostconnection.html#hostid" class="tsd-kind-icon">host<wbr>Id</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_local_.hostconnection.html#remotesiteenv" class="tsd-kind-icon">remote<wbr>Site<wbr>Env</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_local_.hostconnection.html#remotesiteid" class="tsd-kind-icon">remote<wbr>Site<wbr>Id</a>
