deploy: d370ff7a311c2bb474146098293fe252e96b55dc

--- a/enums/_local_.hostid.html
+++ b/enums/_local_.hostid.html
@@ -96,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">FLYWHEEL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;flywheel&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L192">index.d.ts:192</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L196">index.d.ts:196</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">WPE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;wpe&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L193">index.d.ts:193</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L197">index.d.ts:197</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -180,13 +180,22 @@
 						<a href="../interfaces/_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="../interfaces/_local_.rolloutrules.html" class="tsd-kind-icon">Rollout<wbr>Rules</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.sitebanner.html" class="tsd-kind-icon">Site<wbr>Banner</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#rolloutpercentage" class="tsd-kind-icon">Rollout<wbr>Percentage</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
