--- a/interfaces/_local_.sitebanner.html
+++ b/interfaces/_local_.sitebanner.html
@@ -115,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">button<wbr>OnClickIPCEvent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L248">index.d.ts:248</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L252">index.d.ts:252</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -125,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">button<wbr>Text<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L247">index.d.ts:247</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L251">index.d.ts:251</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -135,7 +135,7 @@
 					<div class="tsd-signature tsd-kind-icon">dismissible<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L249">index.d.ts:249</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L253">index.d.ts:253</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -145,7 +145,7 @@
 					<div class="tsd-signature tsd-kind-icon">icon<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"warning"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L245">index.d.ts:245</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L249">index.d.ts:249</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -155,7 +155,7 @@
 					<div class="tsd-signature tsd-kind-icon">id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L242">index.d.ts:242</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L246">index.d.ts:246</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -165,7 +165,7 @@
 					<div class="tsd-signature tsd-kind-icon">link<wbr>Href<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L253">index.d.ts:253</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L257">index.d.ts:257</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -175,7 +175,7 @@
 					<div class="tsd-signature tsd-kind-icon">link<wbr>OnClickIPCEvent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L252">index.d.ts:252</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L256">index.d.ts:256</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -185,7 +185,7 @@
 					<div class="tsd-signature tsd-kind-icon">link<wbr>Text<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L251">index.d.ts:251</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L255">index.d.ts:255</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -195,7 +195,7 @@
 					<div class="tsd-signature tsd-kind-icon">message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L244">index.d.ts:244</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L248">index.d.ts:248</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -205,7 +205,7 @@
 					<div class="tsd-signature tsd-kind-icon">persist<wbr>Dismiss<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L250">index.d.ts:250</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L254">index.d.ts:254</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -215,7 +215,7 @@
 					<div class="tsd-signature tsd-kind-icon">siteID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"router"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L241">index.d.ts:241</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L245">index.d.ts:245</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -225,7 +225,7 @@
 					<div class="tsd-signature tsd-kind-icon">title<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L243">index.d.ts:243</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L247">index.d.ts:247</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -235,7 +235,7 @@
 					<div class="tsd-signature tsd-kind-icon">variant<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"warning"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"neutral"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"success"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"error"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L246">index.d.ts:246</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L250">index.d.ts:250</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -296,6 +296,9 @@
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
 					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="_local_.rolloutrules.html" class="tsd-kind-icon">Rollout<wbr>Rules</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-parent-kind-module">
@@ -348,7 +351,13 @@
 						<a href="_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#rolloutpercentage" class="tsd-kind-icon">Rollout<wbr>Percentage</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
