--- a/enums/_local_.siteservicerole.html
+++ b/enums/_local_.siteservicerole.html
@@ -90,7 +90,7 @@
 					<div class="tsd-signature tsd-kind-icon">DATABASE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;db&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L23">index.d.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L23">index.d.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">HTTP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;http&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L22">index.d.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L22">index.d.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">PHP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;php&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/26aaea9/index.d.ts#L24">index.d.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/d370ff7/index.d.ts#L24">index.d.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -187,13 +187,22 @@
 						<a href="../interfaces/_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="../interfaces/_local_.rolloutrules.html" class="tsd-kind-icon">Rollout<wbr>Rules</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.sitebanner.html" class="tsd-kind-icon">Site<wbr>Banner</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#rolloutpercentage" class="tsd-kind-icon">Rollout<wbr>Percentage</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
